--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* background-color: rgba(197, 201, 54, 0.34); */
   background-color: rgba(197, 201, 54, 0.34);
 }
 
